# ChangeLog for app-admin/keepassx
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.17 2007/12/21 08:27:17 opfer Exp $

*keepassx-0.2.2-r2 (21 Dec 2007)

  21 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  +keepassx-0.2.2-r2.ebuild:
  remove USE flag check and depend on new split Qt ebuilds

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  keepassx-0.2.2-r1.ebuild:
  Add check for png support of x11-libs/qt, reported by Orson Teodoro
  <orsonteodoro AT yahoo DOT com> in bug 202186

  06 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  files/keepassx.desktop:
  fix desktop file as reported by Petteri Räty

  06 Dec 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  fix ChangeLog

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  keepassx-0.2.2-r1.ebuild:
  stable x86

  15 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  keepassx-0.2.2-r1.ebuild:
  use --missing true instead of has_version to detect a supported version of qt

  21 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  -keepassx-0.2.2.ebuild, keepassx-0.2.2-r1.ebuild:
  install license file again as it is needed by the about dialog; clean up

*keepassx-0.2.2-r1 (21 Aug 2007)

  21 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  files/keepassx.desktop, keepassx-0.2.2.ebuild, +keepassx-0.2.2-r1.ebuild:
  don't install license file; fix desktop file so it passes KDE validation;
  all fixes provided by Timo Gurr <timo.gurr@gmail.com> in bug 189569

  22 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  keepassx-0.2.2.ebuild:
  moved USE flag check from src_install to pkg_setup

  01 Jan 2007; Sven Wegener <swegener@gentoo.org> keepassx-0.2.2.ebuild:
  Quote has_version argument because of > operator. Use full atoms for
  built_with_use.

  30 Dec 2006; <opfer@gentoo.org> keepassx-0.2.2.ebuild:
  fixed bug #158149....again (forgot an exclamation mark)
