@@ -6,18 +6,18 @@ MD5 181275de6ed37534e8e4551e972e09a1 files/keepassx.desktop 281
 RMD160 46d613482dc2aeb07e82f7d62b11e368457f1dec files/keepassx.desktop 281
 SHA256 1e550108aef3cdb614a391518f2b4e9de50f4611587ed103fe67ba5baf86b247 files/keepassx.desktop 281
 DIST KeePassX-0.2.2.tar.gz 302656 RMD160 ba386cca105227120c0c50a500eee3b2b2bf24ec SHA1 bae4b984d32f2bb6220d17a135e3322c4df73fcb SHA256 ee588bd744195e394e7b618b8e0aeb25cbf37ca5b619b1c7e2176fd412b29cbd
-EBUILD keepassx-0.2.2-r1.ebuild 1049 RMD160 61f271317d02ecb1fd6a7bb2922d66e9d63fc61d SHA1 0775d5a44f2b3f43ff7c14436b8f8cc22060b68c SHA256 92ac39db77a541277a98602049a096799ede2398e215a0072863ed1bdb726c9c
-MD5 ec28a492e9ea2275ac3cb8bc6cc43098 keepassx-0.2.2-r1.ebuild 1049
-RMD160 61f271317d02ecb1fd6a7bb2922d66e9d63fc61d keepassx-0.2.2-r1.ebuild 1049
-SHA256 92ac39db77a541277a98602049a096799ede2398e215a0072863ed1bdb726c9c keepassx-0.2.2-r1.ebuild 1049
+EBUILD keepassx-0.2.2-r1.ebuild 1050 RMD160 2b7dd9f3a3a788cc99cb69a618174e4eb969ef11 SHA1 cedaff20fe256336f44cd6e92d83b43ca6669d01 SHA256 c463403d4d5d47ac0a84d31695a9ff60086f7e1bc84384f57791e9bc776f5e83
+MD5 76b2ab7c3bbae96f4fa0e32b9833b693 keepassx-0.2.2-r1.ebuild 1050
+RMD160 2b7dd9f3a3a788cc99cb69a618174e4eb969ef11 keepassx-0.2.2-r1.ebuild 1050
+SHA256 c463403d4d5d47ac0a84d31695a9ff60086f7e1bc84384f57791e9bc776f5e83 keepassx-0.2.2-r1.ebuild 1050
 EBUILD keepassx-0.2.2-r2.ebuild 850 RMD160 f61cfc2b17965871c5b304a9d63c99b101ae05cb SHA1 9d4c2466d8570fd83e44166ae18ed0e0f9262564 SHA256 47b1e1ef3ea0a2936f053ec57666fff8248d0582968d0ec0315dbbdc07340e47
 MD5 8aa8f7932050c67cd98d56d6e760a468 keepassx-0.2.2-r2.ebuild 850
 RMD160 f61cfc2b17965871c5b304a9d63c99b101ae05cb keepassx-0.2.2-r2.ebuild 850
 SHA256 47b1e1ef3ea0a2936f053ec57666fff8248d0582968d0ec0315dbbdc07340e47 keepassx-0.2.2-r2.ebuild 850
-MISC ChangeLog 3167 RMD160 156b09e3190df98429d3c223cfb388923fad5a0f SHA1 a232bb35aeccae9a3bacd4637021218279c9abb1 SHA256 24eb98b28e20230389f0561927243eaaebab2d9c60739c299f3444b2e66662c1
-MD5 b095daccd2d14c14c3e3fb41b999d8ff ChangeLog 3167
-RMD160 156b09e3190df98429d3c223cfb388923fad5a0f ChangeLog 3167
-SHA256 24eb98b28e20230389f0561927243eaaebab2d9c60739c299f3444b2e66662c1 ChangeLog 3167
+MISC ChangeLog 3284 RMD160 7f5fdf15c2992e868e0886edb338b6c0ad53d137 SHA1 1f2742c9ae90b822edd0c52743e252b3d84e270b SHA256 d4cea7552c07f863858813ceed8a9c4e8c96c83ca52372b8ef05a58b04548a03
+MD5 03784b0dd28c27bb926914c9a0bba2c1 ChangeLog 3284
+RMD160 7f5fdf15c2992e868e0886edb338b6c0ad53d137 ChangeLog 3284
+SHA256 d4cea7552c07f863858813ceed8a9c4e8c96c83ca52372b8ef05a58b04548a03 ChangeLog 3284
 MISC metadata.xml 505 RMD160 aa11034c8925303264818a4be9ae226c5cb47cfd SHA1 bb91e173269a532d2f85a2c7772cf221a6306dc3 SHA256 f7fb98797c71f4a4b3186f8d6526a1db0c6c57107bebafdcb933d1cd4d104fed
 MD5 5e132b8e1a0ed8e43e12174365b32363 metadata.xml 505
 RMD160 aa11034c8925303264818a4be9ae226c5cb47cfd metadata.xml 505
@@ -29,9 +29,9 @@ MD5 c533243c30cc5d5dc663d928b1fc6800 files/digest-keepassx-0.2.2-r2 244
 RMD160 de8c91ac690bd72f6e2878b0255abce458fb9ab9 files/digest-keepassx-0.2.2-r2 244
 SHA256 d44e82387d8509e8bdc3771b946df5414b2bfeea46c87182fb6b0685fa16d518 files/digest-keepassx-0.2.2-r2 244
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.8 (GNU/Linux)
 
-iD8DBQFHa3mSNQqtfCuFneMRAuKxAJ9ugvlYkwRoFkjIxh5yhF25gtjdDACfdKdM
-g4CVO8SjWX8Xz2wkejthEtw=
-=HDZa
+iEYEARECAAYFAkeLsgsACgkQKhnDs22gwa/DcwCeKgEvMRuIm8TwstEd+0m+5JES
+7qUAoL9cSTDbroK9+fvVx/hUWl8GAVnf
+=h7DF
 -----END PGP SIGNATURE-----
