@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/keepassx
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.17 2007/12/21 08:27:17 opfer Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.18 2008/01/14 19:03:33 angelos Exp $
+
+  14 Jan 2008; Christoph Mende <angelos@gentoo.org>
+  keepassx-0.2.2-r1.ebuild:
+  Stable on amd64 wrt bug #202190
 
 *keepassx-0.2.2-r2 (21 Dec 2007)
 
